recipe monolith lol
